--- a/pom.xml
+++ b/pom.xml
@@ -32,10 +32,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+            <scope>runtime</scope>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
@@ -45,6 +48,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.32</version>
         </dependency>
 
         <dependency>
@@ -82,7 +91,8 @@
                         </path>
                         <path>
                             <groupId>org.projectlombok</groupId>
-                         z   <artifactId>lombok</artifactId>
+                            z
+                            <artifactId>lombok</artifactId>
                             <version>${lombok.version}</version>
                         </path>
                         <path>
