--- a/pom.xml
+++ b/pom.xml
@@ -37,17 +37,15 @@
         </dependency>
 
         <dependency>
-<<<<<<< Updated upstream
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
-=======
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.32</version>
->>>>>>> Stashed changes
         </dependency>
-
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
