--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -6,8 +6,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-
 spring.jpa.hibernate.ddl-auto=validate
+spring.flyway.enabled=true
 spring.datasource.hikari.pool-name=RestDB-Pool
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.data-source-properties.cachePrepStmts=true
@@ -20,8 +20,6 @@ spring.datasource.hikari.data-source-properties.cacheResultSetMetadata=true
 spring.datasource.hikari.data-source-properties.cacheServerConfiguration=true
 spring.datasource.hikari.data-source-properties.elideSetAutoCommits=true
 spring.datasource.hikari.data-source-properties.maintainTimeStats=false
-
-
 ##Show SQL
 #spring.jpa.properties.hibernate.show_sql=true
 #
