--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,6 @@
 logging.level.com.grn.spring5app=debug
-#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=drop-and-create
-#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-source=metadata
-<<<<<<< Updated upstream
-##spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target=drop-and-create.sql
-#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=drop-and-create.sql
-=======
-##spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target=drop-and-V1__init-mysql-database.sql
-#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=drop-and-V1__init-mysql-database.sql
-logging.com.grn.projectlombok=debug
-
-
-#management.endpoints.web.base-path=/actuator
-#management.endpoints.web.exposure.include=health,prometheus,metrics
-#management.endpoint.health.show-details=always
-#management.endpoint.metrics.enabled=true
-#management.endpoint.prometheus.enabled=true
-
+spring.flyway.enabled=false
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=drop-and-create
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-source=metadata
 ###spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target=drop-and-V1__init-mysql-database.sql
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=drop-and-V1__init-mysql-database.sql
->>>>>>> Stashed changes
