--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-logging.level.com.grn.projectlombok=debug
+logging.level.com.grn.spring5app=debug
+spring.flyway.enabled=false
+#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=drop-and-create
+#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-source=metadata
+###spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target=drop-and-V1__init-mysql-database.sql
+#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=drop-and-V1__init-mysql-database.sql
